versioned_docs/version-8.x/tab-view.md
---
id: tab-view
title: React Native Tab View
sidebar_label: Tab View
---

<div className="feature-grid">

- <video playsInline autoPlay muted loop><source src="/assets/navigators/material-top-tabs/highlights/primary-tabbar.mp4" /></video>

  [Primary](#variant)

- <video playsInline autoPlay muted loop><source src="/assets/navigators/material-top-tabs/highlights/secondary-tabbar.mp4" /></video>

  [Secondary](#variant)

- <video playsInline autoPlay muted loop><source src="/assets/navigators/material-top-tabs/highlights/tab-icon.mp4" /></video>

  [Icons](#icon)

- <video playsInline autoPlay muted loop><source src="/assets/navigators/material-top-tabs/highlights/scrollable-tabbar.mp4" /></video>

  [Scrollable tabs](#scrollenabled)

</div>

React Native Tab View is a cross-platform Tab View component for React Native implemented using [`react-native-pager-view`](https://github.com/callstack/react-native-viewpager) on Android & iOS, and [PanResponder](https://reactnative.dev/docs/panresponder) on Web, macOS, and Windows.

It follows material design guidelines by default, but you can also use your own custom tab bar or position the tab bar at the bottom.

If you need React Navigation integration, e.g. show screens in the tab bar and be able to navigate between them using `navigation.navigate` etc, use [Material Top Tab Navigator](material-top-tab-navigator.md) instead.

## Installation

To use this package, open a Terminal in the project root and run:

```bash npm2yarn
npm install react-native-tab-view@next
```

The library depends on [`react-native-pager-view`](https://github.com/callstack/react-native-pager-view) for rendering the pages.

<Tabs groupId='framework' queryString="framework">
<TabItem value='expo' label='Expo' default>

If you have a Expo managed project, in your project directory, run:

```bash
npx expo install react-native-pager-view
```

</TabItem>
<TabItem value='community-cli' label='Community CLI'>

If you have a bare React Native project, in your project directory, run:

```bash npm2yarn
npm install react-native-pager-view
```

</TabItem>
</Tabs>

If you're on a Mac and developing for iOS, you also need to install [pods](https://cocoapods.org/) to complete the linking.

```bash
npx pod-install ios
```

## Quick start

```js name="React Native Tab View" snack
// codeblock-focus-start
import * as React from 'react';
import { View } from 'react-native';
import { TabView, SceneMap } from 'react-native-tab-view';

// codeblock-focus-end
const FirstRoute = () => (
  <View style={{ flex: 1, backgroundColor: '#ff4081' }} />
);

const SecondRoute = () => (
  <View style={{ flex: 1, backgroundColor: '#673ab7' }} />
);

// codeblock-focus-start
const renderScene = SceneMap({
  first: FirstRoute,
  second: SecondRoute,
});

const routes = [
  { key: 'first', title: 'First' },
  { key: 'second', title: 'Second' },
];

export default function App() {
  const [index, setIndex] = React.useState(0);

  return (
    <TabView
      navigationState={{ index, routes }}
      renderScene={renderScene}
      onIndexChange={setIndex}
    />
  );
}
// codeblock-focus-end
```

## API reference

The package exports a `TabView` component which is the one you'd use to render the tab view, and a `TabBar` component which is the default tab bar implementation.

### `TabView`

Container component responsible for rendering and managing tabs. Follows material design styles by default.

Basic usage look like this:

```js
<TabView
  navigationState={{ index, routes }}
  onIndexChange={setIndex}
  renderScene={SceneMap({
    first: FirstRoute,
    second: SecondRoute,
  })}
/>
```

#### TabView Props

##### `navigationState` (`required`)

State for the tab view. The state should contain the following properties:

- `index`: a number representing the index of the active route in the `routes` array
- `routes`: an array containing a list of route objects used for rendering the tabs

Each route object should contain the following properties:

- `key`: a unique key to identify the route (required)
- `title`: title for the route to display in the tab bar
- `icon`: icon for the route to display in the tab bar
- `accessibilityLabel`: accessibility label for the tab button
- `testID`: test id for the tab button

Example:

```js
{
  index: 1,
  routes: [
    { key: 'music', title: 'Music' },
    { key: 'albums', title: 'Albums' },
    { key: 'recents', title: 'Recents' },
    { key: 'purchased', title: 'Purchased' },
  ]
}
```

`TabView` is a controlled component, which means the `index` needs to be updated via the `onIndexChange` callback.

##### `onIndexChange` (`required`)

Callback which is called on tab change, receives the index of the new tab as argument.
The navigation state needs to be updated when it's called, otherwise the change is dropped.

##### `renderScene` (`required`)

Callback which returns a react element to render as the page for the tab. Receives an object containing the route as the argument:

```js
const renderScene = ({ route, jumpTo }) => {
  switch (route.key) {
    case 'music':
      return <MusicRoute jumpTo={jumpTo} />;
    case 'albums':
      return <AlbumsRoute jumpTo={jumpTo} />;
  }
};
```

You need to make sure that your individual routes implement a `shouldComponentUpdate` to improve the performance. To make it easier to specify the components, you can use the `SceneMap` helper.

`SceneMap` takes an object with the mapping of `route.key` to React components and returns a function to use with `renderScene` prop.

```js
import { SceneMap } from 'react-native-tab-view';

...

const renderScene = SceneMap({
  music: MusicRoute,
  albums: AlbumsRoute,
});
```

Specifying the components this way is easier and takes care of implementing a `shouldComponentUpdate` method.

Each scene receives the following props:

- `route`: the current route rendered by the component
- `jumpTo`: method to jump to other tabs, takes a `route.key` as it's argument
- `position`: animated node which represents the current position

The `jumpTo` method can be used to navigate to other tabs programmatically:

```js
props.jumpTo('albums');
```

All the scenes rendered with `SceneMap` are optimized using `React.PureComponent` and don't re-render when parent's props or states change. If you need more control over how your scenes update (e.g. - triggering a re-render even if the `navigationState` didn't change), use `renderScene` directly instead of using `SceneMap`.

:::warning

**Do not** pass inline functions to `SceneMap`, for example, don't do the following:

```js
SceneMap({
  first: () => <FirstRoute foo={props.foo} />,
  second: SecondRoute,
});
```

:::

Always define your components elsewhere in the top level of the file. If you pass inline functions, it'll re-create the component every render, which will cause the entire route to unmount and remount every change. It's very bad for performance and will also cause any local state to be lost.

If you need to pass additional props, use a custom `renderScene` function:

```js
const renderScene = ({ route }) => {
  switch (route.key) {
    case 'first':
      return <FirstRoute foo={props.foo} />;
    case 'second':
      return <SecondRoute />;
    default:
      return null;
  }
};
```

##### `renderTabBar`

Callback which returns a custom React Element to use as the tab bar:

```js
import { TabBar } from 'react-native-tab-view';

...

<TabView
  renderTabBar={props => <TabBar {...props} />}
  ...
/>
```

If this is not specified, the default tab bar is rendered. You pass this props to customize the default tab bar, provide your own tab bar, or disable the tab bar completely.

```js
<TabView
  renderTabBar={() => null}
  ...
/>
```

Example:

```js
import * as React from 'react';
import { Animated, StyleSheet, TouchableOpacity, View } from 'react-native';
import { SceneMap, TabView } from 'react-native-tab-view';

const FirstRoute = () => (
  <View style={[styles.scene, { backgroundColor: '#ff4081' }]} />
);

const SecondRoute = () => (
  <View style={[styles.scene, { backgroundColor: '#673ab7' }]} />
);

const renderScene = SceneMap({
  first: FirstRoute,
  second: SecondRoute,
});

const routes = [
  { key: 'first', title: 'First' },
  { key: 'second', title: 'Second' },
];

// codeblock-focus-start
const renderTabBar = ({ navigationState, position, jumpTo }) => {
  const inputRange = navigationState.routes.map((_, index) => index);

  return (
    <View style={styles.tabBar}>
      {navigationState.routes.map((route, index) => {
        const opacity = position.interpolate({
          inputRange,
          outputRange: inputRange.map((inputIndex) =>
            inputIndex === index ? 1 : 0.5
          ),
        });

        return (
          <TouchableOpacity
            key={route.key}
            style={styles.tabItem}
            onPress={() => jumpTo(route.key)}
          >
            <Animated.Text style={[styles.label, { opacity }]}>
              {route.title}
            </Animated.Text>
          </TouchableOpacity>
        );
      })}
    </View>
  );
};

export default function App() {
  const [index, setIndex] = React.useState(0);

  return (
    <TabView
      navigationState={{ index, routes }}
      renderScene={renderScene}
      // highlight-next-line
      renderTabBar={renderTabBar}
      onIndexChange={setIndex}
    />
  );
}
// codeblock-focus-end

const styles = StyleSheet.create({
  scene: {
    flex: 1,
  },
  tabBar: {
    flexDirection: 'row',
  },
  tabItem: {
    alignItems: 'center',
    flex: 1,
    padding: 16,
  },
  label: {
    color: '#000',
  },
});
```

##### `tabBarPosition`

Position of the tab bar in the tab view. Possible values are `'top'` and `'bottom'`. Defaults to `'top'`.

##### `lazy`

Function which takes an object with the current route and returns a boolean to indicate whether to lazily render the scenes.

By default all scenes are rendered to provide a smoother swipe experience. But you might want to defer the rendering of unfocused scenes until the user sees them. To enable lazy rendering for a particular scene, return `true` from `lazy` for that `route`:

```js
<TabView
  lazy={({ route }) => route.key === 'albums'}
  ...
/>
```

When you enable lazy rendering for a screen, it will usually take some time to render when it comes into focus. You can use the `renderLazyPlaceholder` prop to customize what the user sees during this short period.

You can also pass a boolean to enable lazy for all of the scenes:

```js
<TabView lazy />
```

Example:

```js
import * as React from 'react';
import { StyleSheet, Text, View } from 'react-native';
import { SceneMap, TabView } from 'react-native-tab-view';

const FirstRoute = () => (
  <View style={[styles.scene, { backgroundColor: '#ff4081' }]} />
);

const SecondRoute = () => (
  <View style={[styles.scene, { backgroundColor: '#673ab7' }]} />
);

// codeblock-focus-start
const renderLazyPlaceholder = ({ route }) => {
  return (
    <View style={styles.scene}>
      <Text>Loading {route.title}...</Text>
    </View>
  );
};

// codeblock-focus-end
const renderScene = SceneMap({
  first: FirstRoute,
  second: SecondRoute,
});

const routes = [
  { key: 'first', title: 'First' },
  { key: 'second', title: 'Second' },
];

// codeblock-focus-start
export default function App() {
  const [index, setIndex] = React.useState(0);

  return (
    <TabView
      // highlight-next-line
      lazy
      navigationState={{ index, routes }}
      renderScene={renderScene}
      // highlight-next-line
      renderLazyPlaceholder={renderLazyPlaceholder}
      onIndexChange={setIndex}
    />
  );
}
// codeblock-focus-end

const styles = StyleSheet.create({
  scene: {
    alignItems: 'center',
    flex: 1,
    justifyContent: 'center',
  },
});
```

##### `lazyPreloadDistance`

When `lazy` is enabled, you can specify how many adjacent routes should be preloaded with this prop. This value defaults to `0` which means lazy pages are loaded as they come into the viewport.

##### `renderLazyPlaceholder`

Callback which returns a custom React Element to render for routes that haven't been rendered yet. Receives an object containing the route as the argument. The `lazy` prop also needs to be enabled.

This view is usually only shown for a split second. Keep it lightweight.

By default, this renders `null`.

##### `keyboardDismissMode`

String indicating whether the keyboard gets dismissed in response to a drag gesture. Possible values are:

- `'auto'` (default): the keyboard is dismissed when the index changes.
- `'on-drag'`: the keyboard is dismissed when a drag begins.
- `'none'`: drags do not dismiss the keyboard.

##### `swipeEnabled`

Boolean indicating whether to enable swipe gestures. Swipe gestures are enabled by default. Passing `false` will disable swipe gestures, but the user can still switch tabs by pressing the tab bar.

##### `renderAdapter`

Function that renders a custom adapter for rendering pages. By default, `react-native-tab-view` uses [`react-native-pager-view`](https://github.com/callstack/react-native-pager-view) for rendering pages on Android and iOS. However, it may not be suitable for all use cases.

You can use built-in adapters or create your own custom adapter. For example, you can use `ScrollViewAdapter` to use a `ScrollView` for rendering pages:

```js
import React from 'react';
import { TabView, ScrollViewAdapter } from 'react-native-tab-view';

export default function App() {
  const [index, setIndex] = React.useState(0);

  return (
    <TabView
      navigationState={{ index, routes }}
      renderScene={renderScene}
      onIndexChange={setIndex}
      renderAdapter={(props) => <ScrollViewAdapter {...props} bounces />}
    />
  );
}
```

The following built-in adapters are available:

- `PagerViewAdapter`: Uses [`react-native-pager-view`](https://github.com/callstack/react-native-pager-view) for rendering pages (default on Android & iOS).
- `PanResponderAdapter`: Uses [`PanResponder`](https://reactnative.dev/docs/panresponder) for handling gestures (default on Web and other platforms).
- `ScrollViewAdapter`: Uses [`ScrollView`](https://reactnative.dev/docs/scrollview) for rendering pages.
- `DefaultAdapter`: Uses `PagerViewAdapter` on Android & iOS, and `PanResponderAdapter` on Web and other platforms.

To pass adapter-specific props, wrap the adapter in a function and forward the `TabView` props:

```js
import { Platform } from 'react-native';
import {
  PagerViewAdapter,
  ScrollViewAdapter,
  TabView,
} from 'react-native-tab-view';

function App() {
  return (
    <TabView
      navigationState={{ index, routes }}
      renderScene={renderScene}
      onIndexChange={setIndex}
      renderAdapter={(props) =>
        Platform.OS === 'android' ? (
          <PagerViewAdapter {...props} overScrollMode="never" pageMargin={8} />
        ) : (
          <ScrollViewAdapter {...props} bounces />
        )
      }
    />
  );
}
```

`PagerViewAdapter` accepts props from [`react-native-pager-view`](https://github.com/callstack/react-native-pager-view), such as `overScrollMode` and `pageMargin`. `ScrollViewAdapter` accepts [scroll view](https://reactnative.dev/docs/scrollview) props such as `bounces`, `decelerationRate`, and `keyboardShouldPersistTaps`.

You can also create your own custom adapter by implementing the required interface:

```ts
function MyAdapter({ navigationState, children }: AdapterProps) {
  const { index, routes } = navigationState;

  // Animated.Value containing the current position (index + offset)
  // This should be updated as the user swipes between pages
  const [position] = useState(() => new Animated.Value(index));

  const subscribe = useCallback(
    (callback: (event: { type: 'enter'; index: number }) => void) => {
      // Subscribe to `enter` events and call the callback when the page comes into view
      // This is used to render lazy loaded pages only when they come into view
    },
    []
  );

  const jumpTo = useCallback((key: string) => {
    // Function to jump to a specific page by key of the route
  }, []);

  return children({
    position,
    subscribe,
    jumpTo,
    render: (children) => {
      // Render the pages based on the `children` array
      // The `children` array contains react elements for each route in the routes array
    },
  });
}
```

Check out the [source code of the built-in adapters](https://github.com/react-navigation/react-navigation/tree/main/packages/react-native-tab-view/src) for reference.

##### `animationEnabled`

Enables animation when changing tab. By default it's true.

##### `onSwipeStart`

Callback which is called when the swipe gesture starts, i.e. the user touches the screen and moves it.

##### `onSwipeEnd`

Callback which is called when the swipe gesture ends, i.e. the user lifts their finger from the screen after the swipe gesture.

##### `pagerStyle`

Style to apply to the pager view wrapping all the scenes.

##### `style`

Style to apply to the tab view container.

### `TabBar`

Material design themed tab bar. To customize the tab bar, you'd need to use the `renderTabBar` prop of `TabView` to render the `TabBar` and pass additional props.

For example, to customize the indicator color and the tab bar background color, you can pass `indicatorStyle` and `style` props to the `TabBar` respectively:

```js
const renderTabBar = props => (
  <TabBar
    {...props}
    indicatorStyle={{ backgroundColor: 'white' }}
    style={{ backgroundColor: 'pink' }}
  />
);

//...


return (
  <TabView
    renderTabBar={renderTabBar}
    ...
  />
);
```

#### TabBar Props

##### `variant`

Variant of the tab bar. Supported values are:

- `'primary'` (default): the indicator matches the label & icon width and is centered under the tab, active color defaults to the theme's primary color.
- `'secondary'`: the indicator spans the full tab width, active color defaults to the theme's text color.

##### `renderTabBarItem`

Function that returns a custom React Element to be used as a tab button. By default, it uses [`TabBarItem`](#tabbaritem):

```js
<TabBar
  renderTabBarItem={(props) => <TabBarItem {...props} style={myStyle} />}
  ...
/>
```

See [`TabBarItem`](#tabbaritem) for the full list of props.

##### `renderIndicator`

Function that returns a custom React Element to be used as a tab indicator. By default, it uses [`TabBarIndicator`](#tabbarindicator):

```js
<TabBar
  renderIndicator={(props) => <TabBarIndicator {...props} style={myStyle} />}
  ...
/>
```

See [`TabBarIndicator`](#tabbarindicator) for the full list of props.

##### `onTabPress`

Function to execute on tab press. It receives the scene for the pressed tab, useful for things like scroll to top.

By default, tab press also switches the tab. To prevent this behavior, you can call `preventDefault`:

```js
<TabBar
  onTabPress={({ route, preventDefault }) => {
    if (route.key === 'home') {
      preventDefault();

      // Do something else
    }
  }}
  ...
/>
```

##### `onTabLongPress`

Function to execute on tab long press, use for things like showing a menu with more options

##### `activeColor`

Custom color for icon and label in the active tab.

##### `inactiveColor`

Custom color for icon and label in the inactive tab.

##### `pressColor`

Color for material ripple (Android >= 5.0 only).

##### `pressOpacity`

Opacity for pressed tab (iOS and Android < 5.0 only).

##### `scrollEnabled`

Boolean indicating whether to make the tab bar scrollable.

When `scrollEnabled` is `true`, each tab is sized to fit its content by default. To use a fixed width instead, set `width` in `tabStyle`.

##### `bounces`

Boolean indicating whether the tab bar bounces when scrolling.

##### `tabStyle`

Style to apply to the individual tab items in the tab bar.

By default, all tab items take up the same pre-calculated width based on the width of the container. If you want them to take their original width, you can specify `width: 'auto'` in `tabStyle`.

##### `indicatorStyle`

Style to apply to the active indicator.

The default width of the indicator depends on the [`variant`](#variant):

- With `variant="primary"` (default), the indicator matches the width of the tab's label & icon and is centered under the tab.
- With `variant="secondary"`, the indicator spans the full tab width.

You can customize the indicator in a few ways:

- To shrink it by a fixed amount, add a horizontal margin, e.g. `{ marginHorizontal: 10 }`.
- To give it a specific width, set `width`, e.g. `{ width: 20 }`. By default this aligns the indicator to the start.
- To center a custom-width indicator inside the tab, set `margin` to `'auto'`, e.g. `{ width: 20, marginHorizontal: 'auto' }`.
- To make the corners rounded, pass `borderRadius`,`borderTopLeftRadius`, or `borderTopRightRadius` etc. as a number, e.g. `{ borderRadius: 10 }`.

If you need more control, you can use [`renderIndicator`](#renderindicator) to render a custom indicator instead.

##### `indicatorContainerStyle`

Style to apply to the container view for the indicator.

##### `contentContainerStyle`

Style to apply to the inner container for tabs.

##### `style` (`TabBar`)

Style to apply to the tab bar container.

##### `gap`

Spacing between the tab items.

##### `testID` (`TabBar`)

Test ID for the tab bar. Can be used for scrolling the tab bar in tests

#### Options

Options describe how each tab should be configured. There are 2 ways to specify options:

- `commonOptions`: Options that apply to all tabs.
- `options`: Options that apply to specific tabs. It has the route key as the key and the object with options.

Example:

```js
<TabView
  commonOptions={{
    icon: ({ route, focused, color }) => (
      <Icon name={route.icon} color={color} />
    ),
  }}
  options={{
    albums: {
      labelText: 'Albums',
    },
    profile: {
      labelText: 'Profile',
    },
  }}
/>
```

The following options are available:

##### `accessibilityLabel`

Accessibility label for the tab button. Uses `route.accessibilityLabel` by default if specified, otherwise uses the route title.

##### `accessible`

Whether to mark the tab as `accessible`. Defaults to `true`.

##### `testID`

Test ID for the tab button. Uses `route.testID` by default.

##### `labelText`

Label text for the tab button. Uses `route.title` by default.

##### `labelAllowFontScaling`

Whether label font should scale to respect Text Size accessibility settings. Defaults to `true`.

##### `href`

URL to use for the anchor tag for the tab button on the Web.

##### `label`

A function that returns a custom React Element to be used as a label. The function receives an object with the following properties:

- `route` - The route object for the tab.
- `labelText` - The label text for the tab specified in the `labelText` option or the `route title`.
- `focused` - Whether the label is for the focused state.
- `color` - The color of the label.
- `allowFontScaling` - Whether label font should scale to respect Text Size accessibility settings.
- `style` - The style object for the label.

```js
label: ({ route, labelText, focused, color }) => (
  <Text style={{ color, margin: 8 }}>{labelText ?? route.name}</Text>
);
```

##### `labelStyle`

Style to apply to the tab item label.

##### `icon`

A function that returns a custom React Element to be used as an icon. The function receives an object with the following properties:

- `route` - The route object for the tab.
- `focused` - Whether the icon is for the focused state.
- `color` - The color of the icon.
- `size` - The size of the icon.

```js
icon: ({ route, focused, color }) => (
  <Icon name={focused ? 'albums' : 'albums-outlined'} color={color} />
);
```

##### `badge`

A function that returns a custom React Element to be used as a badge. The function receives an object with the following properties:

- `route` - The route object for the tab.

```js
badge: ({ route }) => (
  <View
    style={{ backgroundColor: 'red', width: 20, height: 20, borderRadius: 10 }}
  />
);
```

##### `sceneStyle`

Style to apply to the view wrapping each screen. You can pass this to override some default styles such as overflow clipping.

### `TabBarIndicator`

The default indicator component used by `TabBar`. It accepts the following props:

- `variant` - Variant of the indicator. Same values as [`TabBar`'s `variant`](#variant). Determines the default size and position behavior:
  - `'primary'` (default): the indicator matches the label & icon width and is centered under the tab.
  - `'secondary'`: the indicator spans the full tab width.
- `navigationState` - Same as [`TabView`'s `navigationState`](#navigationstate-required).
- `widths` - Array of indicator widths in pixels, one entry per route in the same order as `navigationState.routes`. These are the widths computed by `TabBar` based on the current `variant`, `indicatorStyle`, and measured tab/label widths.
- `offsets` - Array of indicator x offsets in pixels (absolute position within the tab bar), one entry per route in the same order as `navigationState.routes`. These already account for `gap`, padding, and any centering implied by `variant` or `marginHorizontal: 'auto'`.
- `position` - Animated value that represents the current position. Goes from `0` to `routes.length - 1` based on the swipe progress. Use this together with `widths` and `offsets` to interpolate the indicator's translation between tabs.
- `direction` - Layout direction of the tab bar. Either `'ltr'` or `'rtl'`.
- `jumpTo` - Function to jump to another tab, takes a `route.key` as its argument.
- `style` - Style to apply to the indicator. See [`indicatorStyle`](#indicatorstyle) for the full list of supported style customizations.

Internally, the indicator is rendered as multiple pieces to be able to support `borderRadius`, `borderTopLeftRadius`, or `borderTopRightRadius` etc. while still using `scale` transforms for animation. So it may not work with all style values properly as if it was a single view.

### `TabBarItem`

The default tab button component used by `TabBar`. It accepts the following props:

- `variant` - Variant of the tab. Same values as [`TabBar`'s `variant`](#variant). Determines the default active color.
- `route` - The route object for this tab.
- `navigationState` - Same as [`TabView`'s `navigationState`](#navigationstate-required).
- `position` - Animated value that represents the current position, used to interpolate the active/inactive label opacity.
- `activeColor` - Custom color for icon and label when the tab is active.
- `inactiveColor` - Custom color for icon and label when the tab is inactive.
- `pressColor` - Color for the material ripple (Android >= 5.0 only).
- `pressOpacity` - Opacity for pressed tab (iOS and Android < 5.0 only).
- `onPress` - Callback to invoke when the tab is pressed. The default `renderTabBarItem` wires this up to switch tabs.
- `onLongPress` - Callback to invoke when the tab is long-pressed.
- `onMeasureLayout` - Callback that receives the measured layout of the tab as `{ width, height }`. `TabBar` uses this to compute tab widths and indicator offsets when tabs are sized to their content (e.g. scrollable tab bars or `tabStyle: { width: 'auto' }`).
- `onMeasureLabelLayout` - Callback that receives the measured layout of the label + icon as `{ width, height }`. `TabBar` uses this to size the indicator under the label for the `'primary'` variant.
- `android_ripple` - Allows you to customize the Android ripple effect on tab press. See [`PressableAndroidRippleConfig`](https://reactnative.dev/docs/pressable#rippleconfig).
- `style` - Style to apply to the tab container. Forwarded from `TabBar`'s `tabStyle`.

In addition to these, `TabBarItem` accepts all the [tab options](#options) (`label`, `labelText`, `labelStyle`, `icon`, `badge`, `href`, `accessibilityLabel`, `accessible`, `testID`, etc.).

If you render your own tab bar item via [`renderTabBarItem`](#rendertabbaritem) instead of using `TabBarItem`, you need to call `onMeasureLayout` and `onMeasureLabelLayout` for the indicator to work:

```tsx
const containerRef = useRef<View>(null);
const labelRef = useRef<View>(null);

useLayoutEffect(() => {
  containerRef.current?.measure((x, y, width, height) => {
    onMeasureLayout({ width, height });
  });

  labelRef.current?.measure((x, y, width, height) => {
    onMeasureLabelLayout({ width, height });
  });
}, [onMeasureLayout, onMeasureLabelLayout]);

return (
  <View
    ref={containerRef}
    onLayout={(event) => {
      const { width, height } = event.nativeEvent.layout;

      onMeasureLayout({ width, height });
    }}
  >
    <View
      ref={labelRef}
      onLayout={(event) => {
        const { width, height } = event.nativeEvent.layout;

        onMeasureLabelLayout({ width, height });
      }}
    >
      {/* ... */}
    </View>
  </View>
);
```

The measurement in `useLayoutEffect` is not required, but it provides the layout before paint, so the indicator can be rendered as early as possible.

## Optimization Tips

### Avoid unnecessary re-renders

The `renderScene` function is called every time the index changes. If your `renderScene` function is expensive, it's good idea move each route to a separate component if they don't depend on the index, and use `shouldComponentUpdate` or `React.memo` in your route components to prevent unnecessary re-renders.

For example, instead of:

```js
const renderScene = ({ route }) => {
  switch (route.key) {
    case 'home':
      return (
        <View style={styles.page}>
          <Avatar />
          <NewsFeed />
        </View>
      );
    default:
      return null;
  }
};
```

Do the following:

```js
const renderScene = ({ route }) => {
  switch (route.key) {
    case 'home':
      return <HomeComponent />;
    default:
      return null;
  }
};
```

Where `<HomeComponent />` is a `PureComponent` if you're using class components:

```js
export default class HomeComponent extends React.PureComponent {
  render() {
    return (
      <View style={styles.page}>
        <Avatar />
        <NewsFeed />
      </View>
    );
  }
}
```

Or, wrapped in `React.memo` if you're using function components:

```js
function HomeComponent() {
  return (
    <View style={styles.page}>
      <Avatar />
      <NewsFeed />
    </View>
  );
}

export default React.memo(HomeComponent);
```

### Optimize large number of routes

If you've a large number of routes, especially images, it can slow the animation down a lot. You can instead render a limited number of routes.

For example, do the following to render only 2 routes on each side:

```js
const renderScene = ({ route }) => {
  if (Math.abs(index - routes.indexOf(route)) > 2) {
    return <View />;
  }

  return <MySceneComponent route={route} />;
};
```

### Avoid rendering TabView inside ScrollView

Nesting the `TabView` inside a vertical `ScrollView` will disable the optimizations in the `FlatList` components rendered inside the `TabView`. So avoid doing it if possible.

### Use `lazy` and `renderLazyPlaceholder` props to render routes as needed

The `lazy` option is disabled by default to provide a smoother tab switching experience, but you can enable it and provide a placeholder component for a better lazy loading experience. Enabling `lazy` can improve initial load performance by rendering routes only when they come into view. Refer the [prop reference](#lazy) for more details.
